--- a/checkbox/skin-islands-checkbox.styl
+++ b/checkbox/skin-islands-checkbox.styl
@@ -1,11 +1,8 @@
 skin-islands-checkbox()
-  skin-islands-button(no-active no-hover retrieve(arguments, sizeless, adaptive))
-
-  vertical-align: middle
+  skin-islands-button(no-active no-hover middle retrieve(arguments, sizeless, adaptive))
 
   text-align: center
 
-  margin-top: -3px
   margin-right: $islands_xs
 
   unless no-modifiers
