--- a/radio/skin-islands-radio.styl
+++ b/radio/skin-islands-radio.styl
@@ -1,9 +1,8 @@
 skin-islands-radio()
-  skin-islands-button(no-active no-hover retrieve(arguments, sizeless, adaptive))
+  skin-islands-button(no-active no-hover middle retrieve(arguments, sizeless, adaptive))
 
   text-align: center
 
-  margin-top: -4px
   margin-right: $islands_xs
 
   border-radius: 50%
